Gtk-3.20: [GtkHeaderBar] Fix unwanted label shifting in toggle buttons

--- a/gtk-3.20/_common.scss
+++ b/gtk-3.20/_common.scss
@@ -1438,6 +1438,8 @@ headerbar {
       min-width: 1.3em;
       min-height: 2.8em;
       padding: 0 0.75em 0;
+
+    label { padding: 0.7em 0 0.8em; }
   }
 
   button,
