--- a/gtk-3.20/gtk.css
+++ b/gtk-3.20/gtk.css
@@ -1701,6 +1701,9 @@ headerbar {
     min-width: 1.3em;
     min-height: 2.8em;
     padding: 0 0.75em 0; }
+    .titlebar button.toggle label,
+    headerbar button.toggle label {
+      padding: 0.7em 0 0.8em; }
   .titlebar button,
   .titlebar .linked > button,
   .titlebar button.suggested-action,
